# SwayAudioIdleInhibit

./: .editorconfig  .gitignore  PKGBUILD  README.md  meson.build  meson_options.txt
build-scripts/: PKGBUILD  sway-audio-idle-inhibit-git.rpkg.spec
include/: data.hpp  idle.hpp  pulse.hpp
services/systemd/: sway-audio-idle-inhibit.service.in
src/: data.cpp  idle.cpp  main.cpp  pulse.cpp
